pages/style.css
* {
    margin:0;
}

@font-face {
    font-family: 'Roboto';
    src: url('fonts/Roboto-Regular.ttf') format('truetype');
    font-weight: normal;
}

@font-face {
    font-family: 'Roboto';
    src: url('fonts/Roboto-Bold.ttf') format('truetype');
    font-weight: bold;
}

@font-face {
    font-family: 'Roboto';
    src: url('fonts/Roboto-VariableFont-wdth,wght.ttf') format('truetype');
    font-weight: 100 900;
}

body {
    font-family: 'Roboto', sans-serif;
    background-color: black;
}

h1 {
    font-weight: 700;
}

p {
    font-weight: 300;
}

.navbar {
    width: 100%;
    height: 50px;
    background-color: black;
}

.navbar-container {
    display: flex;
    align-items: center;
    padding: 0 50px;
    height: 100%;
    color: white;
    font-family: "Goudy Bookletter 1911", sans-serif;
}

.logo-container {
    flex: 1;
}

.logo {
    font-size: 30px;
    color: rgb(234, 141, 234);
}

.menu-container {
    flex: 6;
}

.menu-list {
    display: flex;
    list-style: none;
}

.menu-list a {
    text-decoration: none;
    color: white;
    transition: color 0.3s ease;
}

.menu-list a:hover {
    color: rgb(234, 141, 234);
}

.menu-list-item {
    margin-right: 30px;
}

.menu-list-item.active {
    font-weight: bold;
}

.profile-container {
    flex: 2;
    display: flex;
    align-items: center;
    object-fit: cover; 
    justify-content: flex-end;
}

.profile-container a {
    display: block;
    color: white;
    text-decoration: none;
}

.profile-picture {
    width: 32px;
    height: 32px;
    border-radius: 50%;
    object-fit: cover;
}       

#profile {
    margin: 0 20px;
    text-decoration: none;
    color: white;
    padding-right: 5px;
    transition: color 0.3s ease;
}

#profile:hover {
    color: rgb(234, 141, 234);
}

.login-body{
    background-color:#151515;
    font-family: sans-serif;
}

#form {
    width: 300px;
    margin: 20vh auto 0 auto;
    padding: 20px;
    background-color: whitesmoke;
    border-radius: 4px;
    font-size: 12px;
}

#form h1 {
    color: #151515;
    text-align: center;
}

#form button {
    padding: 10px;
    margin-top: 10px;
    width: 100%;
    color: white;
    background-color: blue;
    border: none;
    border-radius: 4px;
}

.input-control {
    display: flex;
    flex-direction: column;
}

.input-control input {
    border: 2px solid rgb(233, 230, 230); 
    border-radius: 4px;
    display: block;
    font-size: 12px;
    padding: 10px;
    width: 94%;
    align-items: center;
}

.input-control input:focus {
    outline: 0;
}

.input-control.success input {
    border-color: aqua;
}

.input-control.error input {
    border-color: red;
}

.input-control .error {
    color: red;
    font-size: 9px;
    height: 13px;
    padding: 2px;
}

.profile-text-container a:hover {
    color: rgb(234, 141, 234);
}

.toggle {
    width: 40px;
    height:20px;
    background-color: white;
    border-radius: 30px;
    display: flex;
    align-items: center;
    justify-content: space-around;
    position: relative;
}

.toggle-icon {
    color: rgb(234, 141, 234);
}

.toggle-ball {
    width: 18px;
    height: 18px;
    background-color: black;
    position: absolute;
    right: 1px;
    border-radius: 50%;
    cursor: pointer;
}

.sidebar {
    width: 50px;
    height: 100%;
    background-color: black;
    position: fixed;
    top: 0;
    display: flex;
    flex-direction: column;
    align-items: center;
    padding-top: 60px;
}

.sidebar a {
    display: block;
    color: white;
    font-size:20px;
}

.sidebar a i {
    transition: color 0.3s ease;
}

.sidebar i:hover {
    color: rgb(234, 141, 234) !important;
}

.left-menu-icon {
    color: white;
    font-size: 20px;
    margin-bottom: 40px;
}

.container {
    background-color: #151515;
    min-height: calc(100vh - 50px);
    color:white
}

.content-container {
    margin-left: 50px;
}

.featured-title {
    width: 200px;
}

.featured-content {
    height:50vh;
    padding:50px;
    background-color: black;
    background : linear-gradient(to bottom,rgba(0,0,0,0),#151515), url(../images/background1.png);
    background-size: 100%;
}

.featured-desc {
    width:500px;
    color:lightgray;
    margin:50px 0;
}

.featured-button {
    background-color: rgb(234, 141, 234);
    color:white;
    padding :10px 20px;
    border-radius:20px;
    border:none;
    outline:none;
    font-weight: bold;
}

.movie-list-container {
    padding:0 20px;
}

.movie-list-wrapper {
    position: relative;
    overflow: hidden;
}

.movie-list {
    display:flex;
    align-items: center;
    height:300px;
    transform: translateX(0);
    transition: all 1s ease-in-out;
}

.movie-list-item {
    margin-right: 30px;
    position: relative;
}

.movie-list-item:hover .movie-list-item-img {
    transform:scale(1.2);
    margin: 0 30px;
    opacity: 0.7;
}

.movie-list-item:hover .movie-list-item-title,
.movie-list-item:hover .movie-list-item-desc,
.movie-list-item:hover .movie-list-item-button {
  opacity: 1;
}

.movie-list-item-img {
    width: 270px;
    height: 200px;;
    object-fit: cover;
    transition:all 1s ease-in-out;
    border-radius: 20px;
}

.movie-list-item-title {
    background-color: #333;
    padding: 0 10px;
    font-size: 32px;
    font-weight: bold;
    position: absolute;
    top: 10%;
    left: 50px;
    opacity: 0;
    transition: 1s all ease-in-out;
}

.movie-list-item-desc {
    background-color: #333;
    padding: 10px;
    font-size: 14px;
    position: absolute;
    top: 30%;
    left: 50px;
    width: 230px;
    opacity: 0;
    transition: 1s all ease-in-out;
} 

.movie-list-item-button {
    padding: 10px;
    background-color:rgb(234, 141, 234);
    color: white;
    border-radius: 10px;
    outline: none;
    border: none;
    cursor: pointer;
    position: absolute;
    bottom: 20px;
    left: 50px;
    opacity: 0;
    transition: 1s all ease-in-out;
}

.arrow {
    font-size: 120px;
    position: absolute;
    top: 90px;
    color: lightgray;
    opacity: 0.7;
    cursor: pointer;
    z-index: 1;
}

.left-arrow {
    left: 0; 
}

.right-arrow {
    right: 0;
}

.not-signed-in {
    display: flex;
    padding: 15px;
    color:white;
    justify-content: center;
    text-align: center;
    height: 100px;
    border: 5px solid white;
    border-radius: 10px;
    box-sizing: 10px;
    position: absolute;
    left: 200px;
}
.container.active{
    background-color: white;
}
.movie-list-title.active{
    color:black;
}

.navbar-container.active{

    background-color: white;
    color:black;
}

.sidebar.active{
    background-color: white;
}
.left-menu-icon.active{
    color: black;
}
.toggle.active{
    background-color: black;
}
.toggle-ball.active{
    background-color: white;
    transform: translate(-20px);
}

.footer {
    background-color: rgba(128, 128, 128, 0.211);
    padding: 70px;
    align-items: center;
    text-align: center;
    color: white;
}

.footer ul{
    display: flex;
    gap: 20px;
    list-style: none;
    padding: 0 50px;
    padding-bottom: 30px;
    justify-content: center;
}

.footer ul li {
    display: inline;
}

.footer ul a {
    text-decoration: none;
    color: grey;
    transition: color 0.3s ease;
}

.footer ul a:hover {
    color: rgb(234, 141, 234);
}

.footer p {
    padding: 0 50px;
    padding-bottom: 10px;
}


.about-us-container, .privacy-policy, .help-center {
    color: white;
    padding: 0 50px;
    margin: 20px;
}

.what-we-do {
    display: inline;
}

/*body {
    background:rgb(58,58,58);
    color:white;
    font-family: Helvetica Neue, Helvetica, Arial;
    margin:0;
    padding:0;
}

.switch {
    position:relative;
    display:inline-block;
    width:60px;
    height:34px;
}

.switch input {
    opacity:0;
    width:0;
    height:0;
}

.slider {
    position:absolute;
    cursor:pointer;
    top:0;
    left:0;
    right:0;
    bottom:0;
    background-color: #ccc;
    -webkit-transition:0.4s;
    transition:0.4s;
}

.slider:before {
    position:absolute;
    content:"";
    height:19px;
    width:25px;
    left:1px;
    bottom:1px;
    background-color:white;
    -webkit-transition:0.4s;
    transition:0.4s;
}

input:checked + .slider {
    background-color: purple;
}

input:focus + .slider {
    box-shadow: 0 0 1px purple;
}

input:checked + .slider:before {
    -webkit-transform:translateX(26px);
    -ms-transform:translateX(26px);
    transform:translateX(26px);
}

.slider.round {
    border-radius:34px;
}

.slider.round:before {
    border-radius:50%;
}

.theme-switch {
    display:inline-block;
    width:50px;
    height:20px;
    position:relative;
}

.theme-switch input {
    width:0;
    height:0;
    opacity:0;
    position:absolute;
}

header {
    background-color:black;
    background-image:url(images/background4.jpeg);
    background-size:100%;
    background-repeat:no-repeat;
    height:200px;
    padding:20px;
}

.features {
    background:white;
    color:black;
    padding:20px;
    display:flex;
    flex-direction:row;
    justify-content:flex-start;
}

@media screen and (max-width:800px) {
    .features {
        justify-content:space-evenly;
        align-items:center;
        flex-wrap:wrap;
    }
}

.features figure {
    display:inline;
    width:100px;
    margin:25px 60px;
    font-size:medium;
}

.features figure img {
    border-radius:10px;
    width:180px;
    box-shadow:black 0 0 3px;
}

section {
    background:white;
    color:grey;
    padding:20px;
    display: flex;
    flex-direction:row;
}

div {
    background:purple;
    display:block;
    width:100px;
    margin:auto;
}

ul {
    margin:0;
    padding:0;
    list-style-type:none;
}

li {
    display: inline-block;
    margin-right: 10px;
}

a {
    color:rgb(195, 27, 195);
    text-decoration: none;
}

a:hover {
    text-decoration: underline;
}

.dropdown {
    position: relative;
    display: inline-block;
}

.dropdown-content {
    display: none;
    width:max-content;
    padding:0;
    min-width: 100px;
    position: absolute;
    background-color: rgb(213, 98, 181);
    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
}

.dropdown-content a {
    display: block;
    padding: 10px 0;
    color:rgb(67, 8, 70);
    text-decoration: none;
    text-align: center;
    width:100%;
    box-sizing: border-box;
}

.dropdown-content li {
    display:block;
}

.dropdown-content a:hover {
    background-color: rgb(231, 176, 217);
}

.dropdown:hover .dropdown-content {
    display: block;
}

.navbar {
    float:none;
    display:block;
    text-align:left;
    width:100%;
    margin:0;
    padding:10px;
    padding-top:0px;
}

#search-bar {
    float:right;
    padding:6px;
    margin-top:8px;
    margin-right:16px;
    font-size:17px;
    border-radius: 10px;
    border:1px solid purple;
}

footer {
    background:black;
    padding:10px 20px;
}*/











.contact{
    min-height: 100vh;
    padding: 50px;
    text-align: center;
}
.containerContact{
    max-width: 800px;
    margin:0 auto;
}
.containerContact h2{
    font-size: 36px;
    margin-bottom: 40px;
    color: purple;
}
.contact-wrapper{
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-gap: 30px;
}
.contact-form{
    text-align: center;
}
.contact-form h3{
    font-size: 24px;
    margin-bottom: 20px;
    color:purple;

}
.form-group{
    margin-bottom: 20px;
}
input, textarea{
    width: 70%;
    padding: 12px;
    border-radius: 8px;
    border:none;
    background-color: #f8f9fa;
    color:#333;
}
input:focus,
textarea:focus{
    outline:none;
    box-shadow:0 0 8px #bbb;;
}
button{
    display: inline-block;
    padding:12px 24px;
    background-color: purple;
    color: #fff;
    border: none;
    cursor: pointer;
    transition: 0.3s ease;
}
button:hover{
    background-color: rgb(234, 141, 234);
}
.contact-info{
    text-align: center;
}
.contact-info h3{
    font-size: 24px;
    margin-bottom: 20px;
    color: purple;
}
.contact-info p{
    margin-bottom: 10px;
    color:#fff;
}
.contact-info i{
    color:purple;
    margin-right: 10px;
}

